# A-IME

./: .gitignore  AGENTS.md  LICENSE  README.md  main.py  pyproject.toml  产品需求.md
.mimocode/command/: draft-agents.md
config/: __init__.py  config.yaml
core/: __init__.py  logger.py  shutdown.py
core/context/: __init__.py  uia_context.py
core/inference/: __init__.py
core/memory/: __init__.py
core/pinyin/: __init__.py
core/server/: __init__.py
etc/: flask_main.py  socket_main.py  socket_main_sm.py
etc/test/: test_context_probe.py  test_uia.py  test_word_com.py
etc/test/test_result/: brower_test_result.txt  txt_test_resulr.txt  word_test_result.txt
lua/: candidate_collection.lua
